Make jackson version configurable and add test profile